# pgmq

./: CONTRIBUTING.md  mkdocs.yml
.github/: CODEOWNERS
.github/workflows/: crate_ci.yml  extension_upgrade.yml
docs/: fifo-queues.md
docs/api/sql/: functions.md  types.md
examples/: grouped_rr_example.sql
pgmq-extension/: README.md  pgmq.control
pgmq-extension/sql/: pgmq--1.11.1--1.11.2.sql  pgmq--1.8.1--1.9.0.sql  pgmq--1.9.0--1.10.0.sql  pgmq.sql
pgmq-extension/test/expected/: base.out  fifo_per_group_tests.out  fifo_rr_tests.out  fifo_tests.out
pgmq-extension/test/sql/: base.sql  fifo_per_group_tests.sql  fifo_rr_tests.sql  fifo_tests.sql
pgmq-rs/: Cargo.toml  Makefile  README.md
pgmq-rs/examples/: basic.rs  install.rs  transactions.rs
pgmq-rs/pgmq_test_macro/: Cargo.toml
pgmq-rs/pgmq_test_macro/src/: lib.rs
pgmq-rs/src/: errors.rs  lib.rs  types.rs  util.rs
pgmq-rs/src/install/: applied.rs  init_migrations_table.md  installed_version.md  mod.rs  script.rs  version.rs
pgmq-rs/src/install/embedded/: install_sql_embedded.md
pgmq-rs/src/install/github/: install_sql_github.md
pgmq-rs/src/pg_ext/: mod.rs
pgmq-rs/src/private/: mod.rs  util.rs
pgmq-rs/src/queue/: macros.rs  mod.rs  sql.rs  sqlx.rs
pgmq-rs/src/queue/diesel/: diesel_async.rs  diesel_sync.rs  mod.rs  query.rs  sql.rs
pgmq-rs/src/queue/rust_postgres/: mod.rs  postgres.rs  tokio_postgres.rs
pgmq-rs/src/queue/sqlx/: mod.rs  util.rs
pgmq-rs/src/types/: mod.rs  queue_name.rs  visibility_timeout_offset.rs
pgmq-rs/tests/: pg_ext_integration_test.rs  queue.rs  test_sql.rs
