[package]
name = "pgmq"
version = "0.34.0-alpha.5"
edition = "2021"
authors = ["PGMQ Maintainers"]
description = "A distributed message queue for Rust applications, on Postgres."
documentation = "https://docs.rs/pgmq"
homepage = "https://github.com/pgmq/pgmq"
keywords = ["messaging", "queues", "postgres"]
license = "PostgreSQL"
readme = "README.md"
repository = "https://github.com/pgmq/pgmq"
# Determined using `cargo msrv find --all-features`. See: https://github.com/foresterre/cargo-msrv
rust-version = "1.94.0"

[[bin]]
name = "pgmq-cli"
path = "src/bin/pgmq-cli.rs"
required-features = ["cli"]

[features]
default = ["sqlx"]
cli = ["sqlx", "clap", "install-sql-github", "install-sql-embedded", "env_logger"]
install-sql = ["sqlx", "futures-util", "regex", "itertools"]
install-sql-github = ["install-sql", "reqwest", "url/serde"]
install-sql-embedded = ["install-sql", "include_dir"]
queue-experimental = []
# Enables the `PGMQueueExt` client and the `sqlx` implementation of the experimental `Queue` trait if
# the `queue-experimental` feature is also enabled.
sqlx = ["dep:sqlx"]
# Enables the `postgres` implemenation of the `Queue` trait
rust-postgres = ["queue-experimental", "dep:postgres", "dep:postgres-types", "dep:tokio-postgres"]
# Enables the `tokio-postgres` implemenation of the `Queue` trait
tokio-postgres = ["queue-experimental", "dep:tokio-postgres", "dep:postgres-types"]
# Enables shared `diesel` constructs used to implement the `Queue` trait, but can also be used separately without
# using the `Queue` trait, such as `declare_sql_function` definitions of PGMQ functions.
diesel = ["queue-experimental", "dep:diesel"]
# Enables the `diesel` implemenation of the `Queue` trait
diesel-sync = ["queue-experimental", "diesel"]
# Enables the `diesel` pool implemenation of the `Queue` trait
diesel-sync-pool = ["queue-experimental", "diesel-sync", "diesel/r2d2", "dep:r2d2"]
# Enables the `diesel-async` implemenation of the `Queue` trait
diesel-async = ["queue-experimental", "diesel", "dep:diesel-async"]
# Enables the `diesel-async` pool implemenation of the `Queue` trait
diesel-async-pool = ["queue-experimental", "diesel-async", "diesel-async/bb8", "dep:bb8"]

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
serde_derive = { version = "1.0.221" }
serde = { version = "1.0.221" }
serde_json = { version = "1.0.144", features = ["raw_value"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "chrono", "json"], optional = true }
thiserror = "2.0.18"
tokio = { version = "1.38.0", default-features = false, features = ["macros", "time"] }
log = "0.4.18"
url = "2.4.0"
async-trait = { version = "0.1.89" }
postgres-types = { version = "0.2.13", optional = true, features = ["derive", "with-chrono-0_4", "with-serde_json-1", "array-impls"] }
postgres = { version = "0.19.13", optional = true, features = ["with-serde_json-1"] }
tokio-postgres = { version = "0.7.17", optional = true, features = ["with-serde_json-1"] }
diesel = { version = "2.3.9", optional = true, features = ["postgres", "chrono", "serde_json"] }
r2d2 = { version = "0.8.2", optional = true }
diesel-async = { version = "0.9.0", optional = true, features = ["postgres"] }
bb8 = { version = "0.9.0", optional = true }

# Optional dependencies for the `cli` feature
clap = { version = "4.1", features = ["derive"], optional = true }
env_logger = { version = "0.11.0", optional = true }

# Optional dependencies for the `install-sql-github` and `install-sql-embedded` features
futures-util = { version = "0.3.32", optional = true }
include_dir = { version = "0.7.4", optional = true }
regex = { version = "1.12.3", optional = true }
itertools = { version = "0.15.0", optional = true }
reqwest = { version = "0.13.0", features = ["json"], optional = true }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11.0"
rand = "0.10.0"
regex = "1.5.4"
insta = { version = "1.46.3", features = ["json"] }
rstest = "0.26.1"

# If a consumer has both the `time` and `chrono` features of `sqlx` enabled, `sqlx` will default to using
# `OffsetDateTime` (from `time`) for timestamp fields instead of `DateTime<Utc>` (from `chrono`), causing a compilation
# error in `pgmq`. See this issue for more details: https://github.com/launchbadge/sqlx/issues/3412

# `pgmq` only uses the `chrono` feature of `sqlx`, so it's possible to add a query that would encounter this conflict
# in a consumer and not notice because `pgmq` compiles fine on its own. To ensure queries that would see this conflict
# are not added in the future, add the `time` feature in dev dependencies. This is a "regression test" of sorts, in
# that it will enable the `time` feature in tests/examples, simulating the behavior of a consumer of `pgmq` that has
# both the `time` and `chrono` features enabled. If a query that would see the conflict is added, `pgmq` will fail to
# compile when running tests/examples.
sqlx = { version = "0.9.0", features = ["time"] }

pgmq_test_macro = { path = "pgmq_test_macro" }

[[example]]
name = "install"
path = "examples/install.rs"
required-features = ["cli"]

[package.metadata.docs.rs]
# Have docs.rs pass `--all-features` to ensure all features have their documentation built.
all-features = true
